// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SectionBackground /> should match snapshot 1`] = `
.c0 {
  background-color: #fff;
  color: #0A1128;
  min-height: 100vh;
  padding: 5rem;
}

<div
  class="c0"
  id=""
>
  <h1>
    Children
  </h1>
</div>
`;

exports[`<SectionBackground /> should render with background dark 1`] = `
.c0 {
  background-color: #fff;
  color: #0A1128;
  background-color: #0A1128;
  color: #fff;
  min-height: 100vh;
  padding: 5rem;
}

<div>
  <div
    class="c0"
    id=""
  >
    <h1>
      Children
    </h1>
  </div>
</div>
`;

exports[`<SectionBackground /> should render with background light 1`] = `
.c0 {
  background-color: #fff;
  color: #0A1128;
  min-height: 100vh;
  padding: 5rem;
}

<div>
  <div
    class="c0"
    id=""
  >
    <h1>
      Children
    </h1>
  </div>
</div>
`;

exports[`<SectionBackground /> should render with background undefined 1`] = `
.c0 {
  background-color: #fff;
  color: #0A1128;
  min-height: 100vh;
  padding: 5rem;
}

<div>
  <div
    class="c0"
    id=""
  >
    <h1>
      Children
    </h1>
  </div>
</div>
`;
